--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
   <title>Eco-barrier</title>
   <!-- mi css -->
-  <link rel="stylesheet" href="./fontawesome/css/all.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="imagenes/eco-barrier-icono.ico" />
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -88,20 +90,20 @@
   <!-- LISTA DE BENEFICIOS -->
   <section id="producto" class="container-fluid contenedor__atributos">
     <div class="row">
-      <div class="col-lg-6 mb-4 pt-4">
+      <div class="col-lg-5 mb-4 pt-4">
         <h2>Facil de instalar y efectivo</h2>
         <p>
           Eco-barrier ha sido testeado y usada en diferentes zonas de riesgo.
         </p>
         <a href="https://wa.me/541154563675"><button>COMPRAR</button></a>
       </div>
-      <div class="col-lg-6 row">
-        <div class="col-lg-6">
+      <div class="col-lg-7 row">
+        <div class="col-lg-5 item-box">
           <i class="fa-solid fa-gear iconos__atributos"></i>
           <h3>Diseño y estética</h3>
           <p>Eco-barrier tiene un diseño redondeado atractivo visualmente.</p>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-5 item-box">
           <i class="fa-solid fa-clock iconos__atributos"></i>
           <h3>Facil y rápida instalación</h3>
           <p>
@@ -109,12 +111,12 @@
             el suministro de luz inmediatamente.
           </p>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-5 item-box">
           <i class="fa-solid fa-cloud-showers-heavy iconos__atributos"></i>
           <h3>100% resistente al agua y a los rayos UV</h3>
           <p>Eco-barrier persiste ante los mas extremos climas.</p>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-5 item-box">
           <i class="fa-solid fa-recycle iconos__atributos"></i>
           <h3>Duradero y Ecológico</h3>
           <p>
@@ -127,7 +129,7 @@
 
   <!-- SPOT VIDEO -->
   <div class="spot-eco-barrier">
-    <h2>Un puente perfecto entre ardillas, medio ambiente y tecnologia</h2>
+    <h2>Un puente perfecto entre ardillas, medio ambiente y tecnología.</h2>
   </div>
   <!-- SPOT RADIO -->
   <section class="spot-eco-radio bg-light">
