--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <!-- Animation -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Eco-barrier</title>
     <!-- mi css -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -67,14 +67,15 @@
 
     <!-- MAIN SPOT -->
     <main class="spot-eco-video">
-      <iframe
+      <video width="100%" controls autoplay src="./imagenes/ecobarrier disuasivos para ardilla.mp4"></video>
+      <!-- <iframe
         width="100%"
         src="https://www.youtube.com/embed/6b0_q2WZeEk?&autoplay=1&controls=0"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
-      ></iframe>
+      ></iframe> -->
     </main>
     <!-- QUIENES SOMOS -->
     <section
@@ -164,7 +165,7 @@
     </section>
 
     <!-- SPOT VIDEO -->
-    <div class="spot-eco-barrier" >
+    <div class="spot-eco-barrier">
       <h2 data-aos="fade-right" data-aos-duration="2500">
         Un puente perfecto entre ardillas, medio ambiente y tecnología.
       </h2>
@@ -215,7 +216,7 @@
     <form
       id="formulario"
       class="form container-fluid bg-light"
-      action="https://formsubmit.co/matiasbiasioli@gmail.com"
+      action="https://formsubmit.co/ecobarrier2022@gmail.com"
       method="POST"
     >
       <input type="hidden" name="_captcha" value="false" />
@@ -325,6 +326,5 @@
       src="https://kit.fontawesome.com/94048fd23b.js"
       crossorigin="anonymous"
     ></script>
-    
   </body>
 </html>
